# posts_app

./: .env  CHANGELOG.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
secrets/: database_url.txt
src/: config.py  exceptions.py  main.py
src/api/: routes.py
src/client/: base.py  http_client.py  posts_client.py
src/configs/: app_config.py  db_config.py
src/db/: base.py  init_db.py  repo.py  session.py
src/models/: db_models.py  models.py  schemas.py
src/scheduler/: schedule.py
src/services/: db_service.py  fetch_service.py  post_service.py  sync_service.py
src/utils/: dependencies.py  http_client.py  scheduler.py
